[package]
name = "tower-sessions-stores-oracle"
description = "Oracle session stores for `tower-sessions`."
authors = ["Inemar <opensource@inemar.net>"]
license = "MIT"
keywords = ["axum", "sessions", "cookie", "tower", "oracle"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/maxcountryman/tower-sessions-stores"
readme = "README.md"

version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.77"
thiserror = "2.0.18"
rmp-serde = "1.1.2"
time = "0.3.31"
tower-sessions-core = { version = "0.15.0", features = ["deletion-task"] }
bb8-oracle ={ version = "0.3.0" }
bb8 ={ version = "0.9.1"}
#oracle-rs = "0.1.7"
#deadpool-oracle = "0.1.1"
tokio = { version = "1.32.0", features = ["rt"] }
tracing = "0.1"

[dev-dependencies]
axum = "0.8.1"
serde = "1"
tower-sessions = "0.15.0"
tokio = { version = "1.32.0", features = ["full"] }
